Fix for bug 110700. mCItationCOlor wasn't free. R+varada, SR=sspitzer